speedup when the factor script is a constant